src/styles/modal.css
:root {
    --modal-overlay-bg: rgba(0, 0, 0, 0.95);
    --modal-caption-color: rgba(100, 100, 100, 0.5);
    --modal-caption-hover-color: rgb(180, 180, 180);
}

.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--modal-overlay-bg);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1000;
}

.modal-content {
    font-family: "Quicksand", system-ui;
    background: black;
    padding: 20px;
    overflow: auto;
    position: relative;
}

.modal-content figcaption {
    font-optical-sizing: auto;
    font-weight: 400;
    font-size: 20px;
    color: var(--modal-caption-color);
    text-align: end;
    transition: color 0.3s ease;
}

.material-symbols-outlined {
    color: var(--modal-caption-color);
    font-size: 3rem;
    transition: color 0.5s ease;
}

/* Remove button styligng */
.modal-close,
.modal-propagate-arrow {
    font-family: "Material Symbols Outlined", sans-serif;
    all: unset;
    cursor: pointer;
    position: fixed;
}

/* Modal X close button specific styling */
.modal-close {
    right: 35px;
    top: 35px;
}

/* Modal propagate arrow button specific styling */
.modal-propagate-arrow {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    top: 50%;
}

#modal-right-arrow {
    right: 35px;
}

#modal-left-arrow {
    left: 35px;
}

/* When any button is hovered, change all icons and caption */
.modal-content:has(button:hover) .material-symbols-outlined,
.modal-content:has(button:hover) figcaption {
    color: var(--modal-caption-hover-color);
}

/* Also change on direct figcaption hover */
figcaption:hover {
    color: var(--modal-caption-hover-color);
}

